--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 		<META http-equiv="expires" content="0">
 		<META HTTP-EQUIV="Expires" CONTENT="Tue, 01 Jan 1980 1:00:00 GMT">
 		<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
-		<title>Strut - ALPHA</title>
+		<title>Chennai Dashboard</title>
 		<link rel="stylesheet" href="res/css/close-btn.css"></link>
 		<link rel="stylesheet" href="res/css/bootstrap.css"></link>
 		<link rel="stylesheet" href="res/css/main.css"></link>
