--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="res/jqplugins/gradient_picker/jquery.gradientPicker.css" type="text/css" />
 		<link href='preview_export/css/web-fonts.css' rel='stylesheet' type='text/css'></link>
 		<link href='res/vendor/etch.css' rel='stylesheet' type='text/css'></link>
-		<link rel="shortcut icon" href="res/img/strut-icon.png">
+		<link rel="shortcut icon" href="res/img/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" href="res/img/strut-touch.png">
 
 		<!-- VENDOR -->
