--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
 		<script type="text/javascript" src="scripts/vendor/C-underscore.js"></script>
 		<script type="text/javascript" src="scripts/vendor/D-bootstrap.js"></script>
 		<script type="text/javascript" src="scripts/vendor/E-bootstrapDropdown.js"></script>
+		<script type="text/javascript" src="scripts/vendor/F-socket.io.js"></script>
 		<!-- /VENDOR -->
 
 		<script type="text/javascript" src="res/jqplugins/colorpicker/js/colorpicker.js"></script>
